update borrow service controller and service